Preventing scroll on iphone

--- a/vbarkovskij.com/less/sections/navigation.less
+++ b/vbarkovskij.com/less/sections/navigation.less
@@ -147,6 +147,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
+    max-height: 100vh;
     background-color: rgba(0, 0, 0, .4);
     display: none;
     z-index: 999;
